minor fix: horizontal scrollbar appearing on some circumstances;
git-svn-id: http://svn.cmsmadesimple.org/svn/cmsmadesimple/trunk@12710 3d254a34-79dc-0310-9e5f-be208747d8a0

--- a/admin/themes/OneEleven/css/style-rtl.css
+++ b/admin/themes/OneEleven/css/style-rtl.css
@@ -1106,7 +1106,8 @@ header .shortcuts li.favorites a {
 }
 #oe_sidebar aside {
 	padding-bottom: 30px;
-	position: relative
+	overflow: hidden;
+	position: relative;
 }
 #oe_sidebar nav.navigation {
 	height: auto;
